menambah p pada footer

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <p>Magang (2 september 2019 - 2 November 2019)</p>
             <ul>
               <li>Bertanggung Jawab penuh atas Pengecekan, Maintenance dan kerusakan pada server</li>
-              <li>Membantu engginer mencripping Kabel di tiap server</li>
+              <li>Membantu enggineering mencripping Kabel di tiap server</li>
             </ul>
           </div>
         </div>
@@ -258,6 +258,9 @@
 
     <!-- footer -->
     <footer class="bg-primary text-white text-center pb-5">
+      <p class="text-center">Contact Me :</p>
+      <p><i class="bi bi-whatsapp text-center"></i> +6281646034886</p>
+      <p><i class="bi bi-envelope"></i> rizalbagus71@gmail.com</p>
       <p>
         Created with love by <a href="http://www.instagram.com/rizal.bpd/" class="text-white fw-bold"><i class="bi bi-instagram"></i> Rizal</a>
       </p>
