mengubah image menjadi responsive

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
 
+    <!-- favicon -->
+    <!-- <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" /> -->
+
     <title>MY Portfolio | Rizal</title>
   </head>
   <body id="home">
@@ -134,7 +137,7 @@
               </a>
               <div class="overlay" id="gambar-1">
                 <a href="#project" class="close">x close</a>
-                <img src="img/thumb/full1.png" alt="" />
+                <img src="img/thumb/full1.png" class="img-fluid" alt="" />
                 <a href="#gambar-2" class="next"><i class="bi bi-arrow-right h1"></i></a>
               </div>
               <div class="card-body">
@@ -151,7 +154,7 @@
               <div class="overlay" id="gambar-2">
                 <a href="#project" class="close">x close</a>
                 <a href="#gambar-1" class="prev"><i class="bi bi-arrow-left h1"></i></a>
-                <img src="img/thumb/full2.png" alt="" />
+                <img src="img/thumb/full2.png" class="img-fluid" alt="" />
                 <a href="#gambar-3" class="next"><i class="bi bi-arrow-right h1"></i></a>
               </div>
               <div class="card-body">
@@ -167,7 +170,7 @@
               <div class="overlay" id="gambar-3">
                 <a href="#project" class="close">x close</a>
                 <a href="#gambar-2" class="prev"><i class="bi bi-arrow-left h1"></i></a>
-                <img src="img/thumb/full3.png" alt="" />
+                <img src="img/thumb/full3.png" class="img-fluid" alt="" />
                 <a href="#gambar-4" class="next"><i class="bi bi-arrow-right h1"></i></a>
               </div>
               <div class="card-body">
@@ -183,7 +186,7 @@
               <div class="overlay" id="gambar-4">
                 <a href="#project" class="close">x close</a>
                 <a href="#gambar-3" class="prev"><i class="bi bi-arrow-left h1"></i></a>
-                <img src="img/thumb/full4.png" alt="" />
+                <img src="img/thumb/full4.png" class="img-fluid" alt="" />
                 <a href="#gambar-5" class="next"><i class="bi bi-arrow-right h1"></i></a>
               </div>
               <div class="card-body">
@@ -197,9 +200,11 @@
                 <img src="img/thumb/thumb3.png" class="card-img-top img-thumbnail" alt="Project-5" />
               </a>
               <div class="overlay" id="gambar-5">
-                <a href="#project" class="close">x close</a>
-                <a href="#gambar-4" class="prev"><i class="bi bi-arrow-left h1"></i></a>
-                <img src="img/thumb/full5.png" alt="" />
+                <div class="col-md-4">
+                  <a href="#project" class="close">x close</a>
+                  <a href="#gambar-4" class="prev"><i class="bi bi-arrow-left h1"></i></a>
+                  <img src="img/thumb/full5.png" class="img-fluid" alt="" />
+                </div>
               </div>
               <div class="card-body">
                 <p class="card-text fw-bold">Pembuatan Website portfolio mengggunakan HTML & CSS</p>
