--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="style.css" />
 
     <!-- favicon -->
-    <!-- <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" /> -->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
     <title>MY Portfolio | Rizal</title>
   </head>
@@ -68,6 +68,7 @@
         <div class="row text-center mb-2">
           <div class="col">
             <h2>About Me</h2>
+            <br />
           </div>
         </div>
         <div class="row justify-content-center text-center">
