mengubah nomor telephone

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
     <!-- footer -->
     <footer class="bg-primary text-white text-center pb-5">
       <p class="text-center">Contact Me :</p>
-      <p><i class="bi bi-whatsapp text-center"></i> +6281646034886</p>
+      <p><i class="bi bi-whatsapp text-center"></i> 081646034886</p>
       <p><i class="bi bi-envelope"></i> rizalbagus71@gmail.com</p>
       <p>
         Created with love by <a href="http://www.instagram.com/rizal.bpd/" class="text-white fw-bold"><i class="bi bi-instagram"></i> Rizal</a>
