--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
             <p class="text-start fw-bold fs-4"><i class="bi bi-person-fill"></i> Personal Profile</p>
             <hr />
             <p class="fs-5">
-              Halo, Nama saya Rizal Bagus Pambudi, lulusan S1 Teknik Informatika di Universitas Nasional lulusan tahun 2020. Saya memiliki kemampuan dalam bahasa pemograman HTML, CSS, PHP dan javascript. Kemampuan yang saya miliki bisa diandalkan
-              secara individu ataupun tim.
+              Halo, Nama saya Rizal Bagus Pambudi, lulusan S1 Teknik Informatika di Universitas Nasional lulusan tahun 2020. Saya memiliki kemampuan dalam bahasa pemograman HTML, CSS, PHP dan javascript. Kemampuan yang saya miliki bisa
+              diandalkan secara individu ataupun tim.
             </p>
             <p class="text-start fw-bold fs-4 mt-4"><i class="bi bi-book-fill"></i> Education</p>
             <hr />
@@ -138,12 +138,7 @@
                 <img src="img/thumb/home1.png" class="card-img-top img-thumbnail" alt="Project 1" />
                 <span></span>
               </a>
-              <div class="overlay" id="gambar-1">
-                <a href="#project" class="close">x close</a>
-                <img src="img/thumb/full1.png" class="img-fluid" alt="" />
-                <a href="#gambar-2" class="next"><i class="bi bi-arrow-right h1"></i></a>
-              </div>
-              <div class="card-body">
+              <div class="card-body text-center">
                 <p class="card-text fw-bold">Project tentang Pembuatan Website Tracer Study pada bagian halaman utama untuk pelaksanaan Tugas Akhir pada tahun 2020</p>
               </div>
             </div>
@@ -154,13 +149,7 @@
                 <img src="img/thumb/adm1.png" class="card-img-top img-thumbnail" alt="Project-2" />
                 <span></span>
               </a>
-              <div class="overlay" id="gambar-2">
-                <a href="#project" class="close">x close</a>
-                <a href="#gambar-1" class="prev"><i class="bi bi-arrow-left h1"></i></a>
-                <img src="img/thumb/full2.png" class="img-fluid" alt="" />
-                <a href="#gambar-3" class="next"><i class="bi bi-arrow-right h1"></i></a>
-              </div>
-              <div class="card-body">
+              <div class="card-body text-center">
                 <p class="card-text fw-bold">Project tentang Pembuatan Website Tracer Study pada bagian halaman admin.</p>
               </div>
             </div>
@@ -170,13 +159,7 @@
               <a href="https://rizal-01.github.io/web-anime.github.io">
                 <img src="img/thumb/thumb1.png" class="card-img-top img-thumbnail" alt="Project-3" />
               </a>
-              <div class="overlay" id="gambar-3">
-                <a href="#project" class="close">x close</a>
-                <a href="#gambar-2" class="prev"><i class="bi bi-arrow-left h1"></i></a>
-                <img src="img/thumb/full3.png" class="img-fluid" alt="" />
-                <a href="#gambar-4" class="next"><i class="bi bi-arrow-right h1"></i></a>
-              </div>
-              <div class="card-body">
+              <div class="card-body text-center">
                 <p class="card-text fw-bold">Pembuatan Website download film & anime dengan menggunakan HTML & CSS untuk halaman depan</p>
               </div>
             </div>
@@ -186,13 +169,7 @@
               <a href="https://rizalbpd.000webhostapp.com/">
                 <img src="img/web_product.JPG" class="card-img-top img-thumbnail" alt="Project-4" />
               </a>
-              <div class="overlay" id="gambar-4">
-                <a href="#project" class="close">x close</a>
-                <a href="#gambar-3" class="prev"><i class="bi bi-arrow-left h1"></i></a>
-                <img src="img/thumb/full4.png" class="img-fluid" alt="" />
-                <a href="#gambar-5" class="next"><i class="bi bi-arrow-right h1"></i></a>
-              </div>
-              <div class="card-body">
+              <div class="card-body text-center">
                 <p class="card-text fw-bold">Pembuatan Website daftar belanjaan menggunakan Framework CI</p>
               </div>
             </div>
@@ -202,15 +179,18 @@
               <a href="https://rizal-01.github.io/">
                 <img src="img/thumb/thumb3.png" class="card-img-top img-thumbnail" alt="Project-5" />
               </a>
-              <div class="overlay" id="gambar-5">
-                <div class="col-md-4">
-                  <a href="#project" class="close">x close</a>
-                  <a href="#gambar-4" class="prev"><i class="bi bi-arrow-left h1"></i></a>
-                  <img src="img/thumb/full5.png" class="img-fluid" alt="" />
-                </div>
-              </div>
-              <div class="card-body">
+              <div class="card-body text-center">
                 <p class="card-text fw-bold">Pembuatan Website portfolio mengggunakan HTML & CSS</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="400">
+              <a href="https://dare-to-try.000webhostapp.com/">
+                <img src="img/dare.JPG" class="card-img-top img-thumbnail" alt="Project-5" />
+              </a>
+              <div class="card-body text-center">
+                <p class="card-text fw-bold">Pembuatan Website menggunakan framework Laravel 8</p>
               </div>
             </div>
           </div>
