Menambahkan Project Baru

--- a/index.html
+++ b/index.html
@@ -186,11 +186,11 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="400">
-              <a href="https://dare-to-try.000webhostapp.com/">
-                <img src="img/dare.JPG" class="card-img-top img-thumbnail" alt="Project-5" />
+              <a href="https://blog-rizal.000webhostapp.com/">
+                <img src="img/project/blog.png" class="card-img-top img-thumbnail" alt="Project-5" />
               </a>
               <div class="card-body text-center">
-                <p class="card-text fw-bold">Pembuatan Website menggunakan framework Laravel 8</p>
+                <p class="card-text fw-bold">Pembuatan Website Blog menggunakan framework Laravel 8</p>
               </div>
             </div>
           </div>
