--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="400">
-              <a href="https://blog-rizal.000webhostapp.com/">
+              <a href="https://github.com/rizal-01/blogrzl.git">
                 <img src="img/project/blog.png" class="card-img-top img-thumbnail" alt="Project-5" />
               </a>
               <div class="card-body text-center">
