--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="flip-left" data-aos-duration="500">
-              <a href="#gambar-1">
+              <a href="https://diskopukm.malukuprov.go.id/">
                 <img src="img/thumb/home1.png" class="card-img-top img-thumbnail" alt="Project 1" />
                 <span></span>
               </a>
               <div class="card-body text-center">
-                <p class="card-text fw-bold">Project tentang Pembuatan Website Tracer Study pada bagian halaman utama untuk pelaksanaan Tugas Akhir pada tahun 2020</p>
+                <p class="card-text fw-bold">Project pembuatan aplikasi Dinas Koperasi dan UMKM Provinsi Maluku</p>
               </div>
             </div>
           </div>
