--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
             <p class="text-start fw-bold fs-4"><i class="bi bi-person-fill"></i> Personal Profile</p>
             <hr />
             <p class="fs-5">
-              Halo, Nama saya Rizal Bagus Pambudi, lulusan S1 Teknik Informatika di Universitas Nasional lulusan tahun 2020. Saya memiliki kemampuan dalam bahasa pemograman HTML, CSS, PHP dan javascript. Kemampuan yang saya miliki bisa
-              diandalkan secara individu ataupun tim.
+              Halo, Nama Saya Rizal Bagus Pambudi, lulusan S1 Teknik informatika Universitas Nasional lulus pada tahun 2020. Saya ahli dalam bahasa pemograman HTML, CSS, PHP dan Javascript, saya berpengalaman dalam membuat website
+              menggunakan framework laravel dan database MySql dan Postgresql.
             </p>
             <p class="text-start fw-bold fs-4 mt-4"><i class="bi bi-book-fill"></i> Education</p>
             <hr />
@@ -98,17 +98,28 @@
             <hr />
             <ul>
               <li>Programming (HTML, CSS, PHP dan javascript)</li>
-              <li>Framework (Bootstrap dan Codeigniter)</li>
-              <li>Database (MySql)</li>
-              <li>Menguasai paradigma pemograman(OOP dan MVC)</li>
+              <li>Framework PHP Laravel</li>
+              <li>Database (MySql dan Postgresql)</li>
+              <li>Menguasai MVC dan OOP</li>
+              <li>Menguasai GIT/GITHUB</li>
+              <li>Menguasai Rest API Laravel</li>
             </ul>
             <p class="text-start fw-bold fs-4 mt-3"><i class="bi bi-briefcase-fill"></i> Work Experience</p>
             <hr />
-            <p class="lh-sm">PT.Aplikanusa Lintasarta | NOC</p>
+            <p class="lh-sm">1. PT.Aplikanusa Lintasarta | NOC</p>
             <p>Magang (2 september 2019 - 2 November 2019)</p>
             <ul>
               <li>Bertanggung Jawab penuh atas Pengecekan, Maintenance dan kerusakan pada server</li>
               <li>Membantu enggineering mencripping Kabel di tiap server</li>
+              <li>Membuat laporan atas pengecekan data center</li>
+            </ul>
+            <p class="lh-sm">2. CV.SOLUSI GLOBAL SERVISINDO | Web developer</p>
+            <p>Contract (Agustus 2022 - Sekarang)</p>
+            <ul>
+              <li>Melakukan developing web aplikasi dari rancangan hingga testing</li>
+              <li>Melakukan debugging pada website</li>
+              <li>Melakukan maintainance pada website</li>
+              <li>Membuat database untuk keperluan website</li>
             </ul>
           </div>
         </div>
@@ -145,52 +156,52 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="100">
-              <a href="#gambar-2">
-                <img src="img/thumb/adm1.png" class="card-img-top img-thumbnail" alt="Project-2" />
+              <a href="https://siap.partaihanura.or.id/" target="_blank">
+                <img src="img/Hanura_dashboard.JPG" class="card-img-top img-thumbnail" alt="Project-2" />
                 <span></span>
               </a>
               <div class="card-body text-center">
-                <p class="card-text fw-bold">Project tentang Pembuatan Website Tracer Study pada bagian halaman admin.</p>
+                <p class="card-text fw-bold">Project Sistem Informasi Anggota dan Pengurus Partai Hanura</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="200">
-              <a href="https://rizal-01.github.io/web-anime.github.io">
-                <img src="img/thumb/thumb1.png" class="card-img-top img-thumbnail" alt="Project-3" />
+              <a href="https://diskopukm.malukuprov.go.id/" target="_blank">
+                <img src="img/diskopukm.JPG" class="card-img-top img-thumbnail" alt="Project-3" />
               </a>
               <div class="card-body text-center">
-                <p class="card-text fw-bold">Pembuatan Website download film & anime dengan menggunakan HTML & CSS untuk halaman depan</p>
+                <p class="card-text fw-bold">Project dinas koperasi usaha kecil & menengah Provinsi Maluku</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="300">
-              <a href="https://rizalbpd.000webhostapp.com/">
-                <img src="img/web_product.JPG" class="card-img-top img-thumbnail" alt="Project-4" />
+              <a href="https://axisers.com/" target="_blank">
+                <img src="img/dashboard_axis.JPG" class="card-img-top img-thumbnail" alt="Project-4" />
               </a>
               <div class="card-body text-center">
-                <p class="card-text fw-bold">Pembuatan Website daftar belanjaan menggunakan Framework CI</p>
+                <p class="card-text fw-bold">Project invoice PT.AXIS</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="400">
-              <a href="https://rizal-01.github.io/">
-                <img src="img/thumb/thumb3.png" class="card-img-top img-thumbnail" alt="Project-5" />
+              <a href="https://simbaja.kapuashulukab.go.id/" target="_blank">
+                <img src="img/simbaja.JPG" class="card-img-top img-thumbnail" alt="Project-5" />
               </a>
               <div class="card-body text-center">
-                <p class="card-text fw-bold">Pembuatan Website portfolio mengggunakan HTML & CSS</p>
+                <p class="card-text fw-bold">Project Pengadaan barang dan jasa KAB.KAPUAS HULU</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="400">
-              <a href="https://github.com/rizal-01/blogrzl.git">
-                <img src="img/project/blog.png" class="card-img-top img-thumbnail" alt="Project-5" />
+              <a href="https://gisys.co.id" target="_blank">
+                <img src="img/gisys.JPG" class="card-img-top img-thumbnail" alt="Project-5" />
               </a>
               <div class="card-body text-center">
-                <p class="card-text fw-bold">Pembuatan Website Blog menggunakan framework Laravel 8</p>
+                <p class="card-text fw-bold">Project pencatatan barang PT.Gisys</p>
               </div>
             </div>
           </div>
